02-cloud-drive/openshift/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-app
spec:
  selector:
    app: nextcloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
